[package]
name = "ayisha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.7.0"
actix-web-actors = "4.3.0"
awc = "3.5.0"
chrono = "0.4.38"
ipnetwork = "0.20.0"
log = {version = "0.4.21", features = ["kv"]}
log4rs = "1.3.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
futures-util = { version = "0.3.30", features = ["sink"] }
bytestring = "1.3.1"
tokio-util = "0.7.11"
lazy_static = "1.5.0"
structopt = "0.3.26"
toml = "0.8.14"
sqlite = "0.36.0"
rand = "0.8.5"
#simd-json = "0.13.10"
parking_lot = "0.12"